--- a/MyApp/Resource.resx
+++ b/MyApp/Resource.resx
@@ -264,4 +264,19 @@
   <data name="ProductList" xml:space="preserve">
     <value>List of Product</value>
   </data>
+  <data name="Unit" xml:space="preserve">
+    <value>Unit</value>
+  </data>
+  <data name="Price" xml:space="preserve">
+    <value>Price</value>
+  </data>
+  <data name="Type" xml:space="preserve">
+    <value>Type</value>
+  </data>
+  <data name="FileAttachment" xml:space="preserve">
+    <value>File Attachment</value>
+  </data>
+  <data name="AddNewProduct" xml:space="preserve">
+    <value>Add New Product</value>
+  </data>
 </root>
